# hasql-cursor-query

./: .travis.yml  hasql-cursor-query.cabal  hasql-cursor.cabal  hasql-streaming.cabal
.github/workflows/: check.yaml  on-push-to-release.yaml
tasty/: Main.hs
tasty/Main/: CursorQueries.hs  IO.hs  Queries.hs  Statements.hs
