name:
  hasql-cursor
version:
  0.3
category:
  Hasql, Database, PostgreSQL, Streaming
synopsis:
  A declarative abstraction over PostgreSQL Cursor
homepage:
  https://github.com/nikita-volkov/hasql-cursor 
bug-reports:
  https://github.com/nikita-volkov/hasql-cursor/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-cursor.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Cursor.Private.Prelude
    Hasql.Cursor.Private.Queries
    Hasql.Cursor.Private.Specs
    Hasql.Cursor.Private.Transactions
    Hasql.Cursor.Private.Sessions
  exposed-modules:
    Hasql.Cursor.Transactions
    Hasql.Cursor.Sessions
    Hasql.Cursor.Specs
  build-depends:
    -- database:
    hasql >= 0.19 && < 0.20,
    hasql-transaction >= 0.4.5.1 && < 0.5,
    -- data:
    bytestring-tree-builder == 0.2.*,
    bytestring >= 0.10 && < 0.11,
    -- control:
    foldl > 1 && < 2,
    profunctors == 5.*,
    contravariant-extras == 0.3.*,
    contravariant >= 1.3 && < 2,
    transformers >= 0.3 && < 0.6,
    -- general:
    base-prelude >= 0.1.19 && < 2,
    base >= 4.8 && < 5
