name:
  hasql-cursor
version:
  0.3
category:
  Hasql, Database, PostgreSQL, Streaming
synopsis:
  A declarative abstraction over PostgreSQL Cursor
homepage:
  https://github.com/nikita-volkov/hasql-cursor 
bug-reports:
  https://github.com/nikita-volkov/hasql-cursor/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-cursor.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Cursor.Private.Prelude
    Hasql.Cursor.Private.Specs
    Hasql.Cursor.Private.Decoders
    Hasql.Cursor.Private.Transactions
    Hasql.Cursor.Private.CursorTransactions
    Hasql.Cursor.Private.Sessions
  exposed-modules:
    Hasql.Cursor.Transactions
    Hasql.Cursor.Sessions
    Hasql.Cursor.Specs
  build-depends:
    -- database:
    hasql >= 0.19 && < 0.20,
    hasql-transaction >= 0.4.5.1 && < 0.5,
    hasql-cursor-transaction >= 0.4 && < 0.5,
    -- data:
    bytestring >= 0.10 && < 0.11,
    -- control:
    foldl > 1 && < 2,
    profunctors == 5.*,
    contravariant-extras == 0.3.*,
    contravariant >= 1.3 && < 2,
    -- general:
    base-prelude >= 0.1.19 && < 2,
    base >= 4.8 && < 5


test-suite tasty
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tasty
  main-is:
    Main.hs
  other-modules:
    Main.CursorQueries
    Main.Queries
    Main.IO
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- database:
    hasql,
    hasql-cursor,
    -- testing:
    tasty == 0.11.*,
    tasty-quickcheck == 0.8.*,
    tasty-smallcheck == 0.8.*,
    tasty-hunit == 0.9.*,
    quickcheck-instances >= 0.3.11 && < 0.4,
    QuickCheck >= 2.8.1 && < 2.9,
    -- 
    foldl >= 1.2 && < 2,
    rebase < 2
