name:
  hasql-streaming
version:
  0.1
category:
  Hasql, Database, PostgreSQL
synopsis:
homepage:
  https://github.com/nikita-volkov/hasql-streaming 
bug-reports:
  https://github.com/nikita-volkov/hasql-streaming/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-streaming.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Streaming.Prelude
    Hasql.Streaming.Queries
  exposed-modules:
    Hasql.Streaming
  build-depends:
    -- database:
    hasql >= 0.11 && < 0.12,
    -- data:
    vector >= 0.10 && < 0.12,
    text >= 1 && < 1.3,
    bytestring-tree-builder == 0.1.*,
    bytestring >= 0.10 && < 0.11,
    -- control:
    terminating-reducer == 0.2.*,
    profunctors == 5.*,
    contravariant-extras == 0.3.*,
    contravariant >= 1.3 && < 2,
    either >= 4.4.1 && < 5,
    transformers >= 0.3 && < 0.5,
    -- errors:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    base-prelude >= 0.1.19 && < 0.2,
    base >= 4.8 && < 5


executable demo
  hs-source-dirs:
    demo
  main-is:
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    contravariant-extras,
    contravariant,
    hasql-streaming,
    text,
    bytestring,
    base-prelude
